Start preprocessing xc metadata

--- a/notebooks/scrape_xeno_canto.ipynb
+++ b/notebooks/scrape_xeno_canto.ipynb
@@ -26,9 +26,7 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "RAW_TRAIN_METADATA_PATH = Path('../data/raw/train_metadata.csv')"
+    "import pandas as pd"
    ],
    "outputs": [],
    "execution_count": 1
@@ -129,7 +127,7 @@
    },
    "cell_type": "code",
    "source": [
-    "species = pd.read_csv(RAW_TRAIN_METADATA_PATH)[\"scientific_name\"].unique()\n",
+    "species = pd.read_csv('../data/raw/train_metadata.csv')[\"scientific_name\"].unique()\n",
     "len(species)"
    ],
    "id": "83f7146464933717",
