Add convert metadata notebook

--- a/notebooks/scrape_xeno_canto.ipynb
+++ b/notebooks/scrape_xeno_canto.ipynb
@@ -26,7 +26,14 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from typing import TypeAlias\n",
+    "from collections.abc import Mapping, Sequence\n",
+    "\n",
+    "JSON: TypeAlias = Mapping[str, \"JSON\"] | Sequence[\"JSON\"] | str | int | float | bool | None\n",
+    "\n",
+    "TRAIN_METADATA_PATH = Path(\"../data/processed/train_metadata.csv\")"
    ],
    "outputs": [],
    "execution_count": 1
@@ -127,7 +134,7 @@
    },
    "cell_type": "code",
    "source": [
-    "species = pd.read_csv('../data/raw/train_metadata.csv')[\"scientific_name\"].unique()\n",
+    "species = pd.read_csv(TRAIN_METADATA_PATH)[\"scientific_name\"].unique()\n",
     "len(species)"
    ],
    "id": "83f7146464933717",
@@ -779,12 +786,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# Define types for storing the metadata\n",
-    "from typing import TypeAlias\n",
-    "from collections.abc import Mapping, Sequence\n",
-    "\n",
-    "JSON: TypeAlias = Mapping[str, \"JSON\"] | Sequence[\"JSON\"] | str | int | float | bool | None\n",
-    "\n",
     "# class XenoCantoAPIRecording(TypedDict, total=False):\n",
     "#     id: int\n",
     "#     gen: str\n",
@@ -847,7 +848,7 @@
    "source": [
     "# Once all the metadata has been retrieved, we merge all pages within a species and store all the recordings metadata in a dataframe\n",
     "def merge_pages(name: str) -> list[JSON]:\n",
-    "    files = list((Path(\"dataset/metadata/\") / name.replace(' ', '')).glob(\"*.json\"))\n",
+    "    files = list((Path(\"./dataset/metadata/\") / name.replace(\" \", \"\")).glob(\"*.json\"))\n",
     "    pages = [{}] * (len(files))\n",
     "    for i, file in enumerate(files):\n",
     "        with open(file, \"r\") as f:\n",
@@ -857,7 +858,7 @@
     "\n",
     "records = list(itertools.chain.from_iterable([merge_pages(name) for name in species]))\n",
     "meta_dataframe = pd.DataFrame(records).astype({\"id\": int}).sort_values(by=\"id\")\n",
-    "meta_dataframe.to_csv(\"dataset/metadata.csv\", index=False)\n",
+    "meta_dataframe.to_csv(\"./dataset/metadata.csv\", index=False)\n",
     "meta_dataframe.head(5)"
    ],
    "id": "5da5b08759ee0202",
@@ -1095,11 +1096,11 @@
    "cell_type": "code",
    "source": [
     "# Match the metadata with the recordings in our dataset\n",
-    "ids = pd.read_csv(RAW_TRAIN_METADATA_PATH)[\"url\"].str.split(\"/\").str.get(-1).astype(int).to_list()\n",
-    "metadata = pd.read_csv(\"dataset/metadata.csv\")\n",
+    "ids = pd.read_csv(TRAIN_METADATA_PATH)[\"url\"].str.split(\"/\").str.get(-1).astype(int).to_list()\n",
+    "metadata = pd.read_csv(\"./dataset/metadata.csv\")\n",
     "\n",
     "train_metadata_xc = metadata[metadata[\"id\"].isin(ids)]\n",
-    "train_metadata_xc.to_csv(\"dataset/train_metadata_xc.csv\", index=False)\n",
+    "train_metadata_xc.to_csv(\"./dataset/train_metadata_xc.csv\", index=False)\n",
     "train_metadata_xc.shape"
    ],
    "id": "7c90a337c6167067",
