--- a/notebooks/convert_metadata.ipynb
+++ b/notebooks/convert_metadata.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:02:48.452886Z",
-     "start_time": "2024-05-02T10:02:48.449755Z"
+     "end_time": "2024-05-02T10:15:25.159662Z",
+     "start_time": "2024-05-02T10:15:25.156527Z"
     }
    },
    "cell_type": "code",
@@ -39,20 +39,22 @@
     "# Re-scraped 2024 metadata\n",
     "XC_METADATA_PATH: Final[Path] = Path(\"./dataset/train_metadata_xc.csv\")\n",
     "OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024/train_metadata.csv\")\n",
+    "EXTENSION: Final[str] = \".ogg\"\n",
     "\n",
     "# Additional 2024 metadata\n",
     "# XC_METADATA_PATH: Final[Path] = Path(\"../data/raw/BirdClef2024_additional.csv\")\n",
-    "# OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024_additional/train_metadata.csv\")"
+    "# OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024_additional/train_metadata.csv\")\n",
+    "# EXTENSION: Final[str] = \".mp3\""
    ],
    "id": "1bf84269af6f6d2f",
    "outputs": [],
-   "execution_count": 79
+   "execution_count": 83
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:02:48.827692Z",
-     "start_time": "2024-05-02T10:02:48.798389Z"
+     "end_time": "2024-05-02T10:15:25.480280Z",
+     "start_time": "2024-05-02T10:15:25.451512Z"
     }
    },
    "cell_type": "code",
@@ -64,13 +66,13 @@
    ],
    "id": "1d04bc58d6885a0",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 84
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:02:49.589379Z",
-     "start_time": "2024-05-02T10:02:49.283456Z"
+     "end_time": "2024-05-02T10:15:25.919847Z",
+     "start_time": "2024-05-02T10:15:25.609177Z"
     }
    },
    "cell_type": "code",
@@ -90,7 +92,7 @@
     "metadata[\"primary_label\"] = metadata[\"scientific_name\"].map(scientific_name_to_birdcode)\n",
     "metadata[\"secondary_labels\"] = metadata[\"also\"].map(lambda l: [scientific_name_to_birdcode[x] for x in ast.literal_eval(l) if x in scientific_name_to_birdcode])\n",
     "metadata[\"url\"] = \"https:\" + metadata[\"url\"]\n",
-    "metadata[\"filename\"] = (metadata[\"primary_label\"] + \"/XC\" + metadata[\"id\"].astype(str) + \".mp3\")\n",
+    "metadata[\"filename\"] = (metadata[\"primary_label\"] + \"/XC\" + metadata[\"id\"].astype(str) + EXTENSION)\n",
     "metadata[\"rating\"] = metadata[\"q\"].map(RATING_MAP)\n",
     "metadata = metadata.drop(columns=[\"id\", \"q\", \"also\"]).sort_values(\"filename\").reindex(columns=[\n",
     "    \"primary_label\", \"secondary_labels\", \"type\", \"latitude\", \"longitude\", \"scientific_name\", \"common_name\", \"author\", \"license\", \"rating\", \"url\",  \"filename\"\n",
@@ -132,11 +134,11 @@
        "3095  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
        "\n",
        "                                url             filename  \n",
-       "918   https://xeno-canto.org/134896  asbfly/XC134896.mp3  \n",
-       "1774  https://xeno-canto.org/175797  asbfly/XC175797.mp3  \n",
-       "2903  https://xeno-canto.org/207738  asbfly/XC207738.mp3  \n",
-       "3094  https://xeno-canto.org/209218  asbfly/XC209218.mp3  \n",
-       "3095  https://xeno-canto.org/209219  asbfly/XC209219.mp3  "
+       "918   https://xeno-canto.org/134896  asbfly/XC134896.ogg  \n",
+       "1774  https://xeno-canto.org/175797  asbfly/XC175797.ogg  \n",
+       "2903  https://xeno-canto.org/207738  asbfly/XC207738.ogg  \n",
+       "3094  https://xeno-canto.org/209218  asbfly/XC209218.ogg  \n",
+       "3095  https://xeno-canto.org/209219  asbfly/XC209219.ogg  "
       ],
       "text/html": [
        "<div>\n",
@@ -185,7 +187,7 @@
        "      <td>//creativecommons.org/licenses/by-nc-sa/3.0/</td>\n",
        "      <td>5</td>\n",
        "      <td>https://xeno-canto.org/134896</td>\n",
-       "      <td>asbfly/XC134896.mp3</td>\n",
+       "      <td>asbfly/XC134896.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1774</th>\n",
@@ -200,7 +202,7 @@
        "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
        "      <td>3</td>\n",
        "      <td>https://xeno-canto.org/175797</td>\n",
-       "      <td>asbfly/XC175797.mp3</td>\n",
+       "      <td>asbfly/XC175797.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2903</th>\n",
@@ -215,7 +217,7 @@
        "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
        "      <td>1</td>\n",
        "      <td>https://xeno-canto.org/207738</td>\n",
-       "      <td>asbfly/XC207738.mp3</td>\n",
+       "      <td>asbfly/XC207738.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3094</th>\n",
@@ -230,7 +232,7 @@
        "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
        "      <td>4</td>\n",
        "      <td>https://xeno-canto.org/209218</td>\n",
-       "      <td>asbfly/XC209218.mp3</td>\n",
+       "      <td>asbfly/XC209218.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3095</th>\n",
@@ -245,32 +247,32 @@
        "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
        "      <td>4</td>\n",
        "      <td>https://xeno-canto.org/209219</td>\n",
-       "      <td>asbfly/XC209219.mp3</td>\n",
+       "      <td>asbfly/XC209219.ogg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 81
+   "execution_count": 85
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:02:50.267667Z",
-     "start_time": "2024-05-02T10:02:50.166125Z"
+     "end_time": "2024-05-02T10:15:26.024348Z",
+     "start_time": "2024-05-02T10:15:25.920888Z"
     }
    },
    "cell_type": "code",
    "source": "metadata.to_csv(OUT_METADATA_PATH, index=False)",
    "id": "688f5ed76601c575",
    "outputs": [],
-   "execution_count": 82
+   "execution_count": 86
   }
  ],
  "metadata": {
