Fix last scrape xeno-canto scraping bugs

--- a/notebooks/convert_metadata.ipynb
+++ b/notebooks/convert_metadata.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:15:25.159662Z",
-     "start_time": "2024-05-02T10:15:25.156527Z"
+     "end_time": "2024-05-02T13:12:59.886616Z",
+     "start_time": "2024-05-02T13:12:59.883713Z"
     }
    },
    "cell_type": "code",
@@ -48,13 +48,13 @@
    ],
    "id": "1bf84269af6f6d2f",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:15:25.480280Z",
-     "start_time": "2024-05-02T10:15:25.451512Z"
+     "end_time": "2024-05-02T13:13:00.183333Z",
+     "start_time": "2024-05-02T13:13:00.131674Z"
     }
    },
    "cell_type": "code",
@@ -62,17 +62,17 @@
     "# Retrieve mapping from scientific name to birdcode\n",
     "ebird_taxonomy = pd.read_csv(EBIRD_TAXONOMY_PATH, usecols=[\"SPECIES_CODE\", \"SCI_NAME\"])\n",
     "\n",
-    "scientific_name_to_birdcode: Mapping[str, str] = ebird_taxonomy.set_index(\"SCI_NAME\").to_dict()[\"SPECIES_CODE\"]"
+    "scientific_name_to_birdcode: Mapping[str, str] = ebird_taxonomy.set_index(\"SCI_NAME\").to_dict()[\"SPECIES_CODE\"] | {\"Spilopelia senegalensis\": \"laudov1\", \"Spilopelia chinensis\": \"spodov\", \"Acritillas indica\": \"yebbul3\"}"
    ],
    "id": "1d04bc58d6885a0",
    "outputs": [],
-   "execution_count": 84
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:15:25.919847Z",
-     "start_time": "2024-05-02T10:15:25.609177Z"
+     "end_time": "2024-05-02T13:13:00.691204Z",
+     "start_time": "2024-05-02T13:13:00.354323Z"
     }
    },
    "cell_type": "code",
@@ -96,7 +96,7 @@
     "metadata[\"rating\"] = metadata[\"q\"].map(RATING_MAP)\n",
     "metadata = metadata.drop(columns=[\"id\", \"q\", \"also\"]).sort_values(\"filename\").reindex(columns=[\n",
     "    \"primary_label\", \"secondary_labels\", \"type\", \"latitude\", \"longitude\", \"scientific_name\", \"common_name\", \"author\", \"license\", \"rating\", \"url\",  \"filename\"\n",
-    "]).dropna(subset=[\"primary_label\"])\n",
+    "])\n",
     "\n",
     "metadata.head()"
    ],
@@ -106,39 +106,39 @@
      "data": {
       "text/plain": [
        "     primary_label    secondary_labels    type  latitude  longitude  \\\n",
-       "918         asbfly                  []  [call]   39.2297   118.1987   \n",
-       "1774        asbfly  [gybthr1, brebul1]  [song]   36.3319   127.3555   \n",
-       "2903        asbfly                  []  [call]   21.1697    70.6005   \n",
-       "3094        asbfly                  []  [call]   15.5442    73.7733   \n",
-       "3095        asbfly                  []  [call]   15.5442    73.7733   \n",
+       "937         asbfly                  []  [call]   39.2297   118.1987   \n",
+       "1809        asbfly  [gybthr1, brebul1]  [song]   36.3319   127.3555   \n",
+       "2961        asbfly                  []  [call]   21.1697    70.6005   \n",
+       "3154        asbfly                  []  [call]   15.5442    73.7733   \n",
+       "3155        asbfly                  []  [call]   15.5442    73.7733   \n",
        "\n",
        "         scientific_name             common_name  \\\n",
-       "918   Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "1774  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "2903  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "3094  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "3095  Muscicapa dauurica  Asian Brown Flycatcher   \n",
+       "937   Muscicapa dauurica  Asian Brown Flycatcher   \n",
+       "1809  Muscicapa dauurica  Asian Brown Flycatcher   \n",
+       "2961  Muscicapa dauurica  Asian Brown Flycatcher   \n",
+       "3154  Muscicapa dauurica  Asian Brown Flycatcher   \n",
+       "3155  Muscicapa dauurica  Asian Brown Flycatcher   \n",
        "\n",
        "                                 author  \\\n",
-       "918                      Matt Slaymaker   \n",
-       "1774                      Stuart Fisher   \n",
-       "2903                          vir joshi   \n",
-       "3094  Albert Lastukhin & Sergei Karpeev   \n",
-       "3095  Albert Lastukhin & Sergei Karpeev   \n",
+       "937                      Matt Slaymaker   \n",
+       "1809                      Stuart Fisher   \n",
+       "2961                          vir joshi   \n",
+       "3154  Albert Lastukhin & Sergei Karpeev   \n",
+       "3155  Albert Lastukhin & Sergei Karpeev   \n",
        "\n",
        "                                           license  rating  \\\n",
-       "918   //creativecommons.org/licenses/by-nc-sa/3.0/       5   \n",
-       "1774  //creativecommons.org/licenses/by-nc-sa/4.0/       3   \n",
-       "2903  //creativecommons.org/licenses/by-nc-sa/4.0/       1   \n",
-       "3094  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
-       "3095  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
+       "937   //creativecommons.org/licenses/by-nc-sa/3.0/       5   \n",
+       "1809  //creativecommons.org/licenses/by-nc-sa/4.0/       3   \n",
+       "2961  //creativecommons.org/licenses/by-nc-sa/4.0/       1   \n",
+       "3154  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
+       "3155  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
        "\n",
        "                                url             filename  \n",
-       "918   https://xeno-canto.org/134896  asbfly/XC134896.ogg  \n",
-       "1774  https://xeno-canto.org/175797  asbfly/XC175797.ogg  \n",
-       "2903  https://xeno-canto.org/207738  asbfly/XC207738.ogg  \n",
-       "3094  https://xeno-canto.org/209218  asbfly/XC209218.ogg  \n",
-       "3095  https://xeno-canto.org/209219  asbfly/XC209219.ogg  "
+       "937   https://xeno-canto.org/134896  asbfly/XC134896.ogg  \n",
+       "1809  https://xeno-canto.org/175797  asbfly/XC175797.ogg  \n",
+       "2961  https://xeno-canto.org/207738  asbfly/XC207738.ogg  \n",
+       "3154  https://xeno-canto.org/209218  asbfly/XC209218.ogg  \n",
+       "3155  https://xeno-canto.org/209219  asbfly/XC209219.ogg  "
       ],
       "text/html": [
        "<div>\n",
@@ -175,7 +175,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>918</th>\n",
+       "      <th>937</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
        "      <td>[call]</td>\n",
@@ -190,7 +190,7 @@
        "      <td>asbfly/XC134896.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1774</th>\n",
+       "      <th>1809</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[gybthr1, brebul1]</td>\n",
        "      <td>[song]</td>\n",
@@ -205,7 +205,7 @@
        "      <td>asbfly/XC175797.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2903</th>\n",
+       "      <th>2961</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
        "      <td>[call]</td>\n",
@@ -220,7 +220,7 @@
        "      <td>asbfly/XC207738.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3094</th>\n",
+       "      <th>3154</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
        "      <td>[call]</td>\n",
@@ -235,7 +235,7 @@
        "      <td>asbfly/XC209218.ogg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3095</th>\n",
+       "      <th>3155</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
        "      <td>[call]</td>\n",
@@ -254,25 +254,84 @@
        "</div>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 85
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Merge re-scraped metadata with metadata from the competition\n",
+    "Since 542 audio files have been removed from Xeno-Canto, but are still present in our dataset, we have to merge the missing data from the BirdCLEF 2024 data into the new dataframe. \n",
+    "\n",
+    "SKIP THE NEXT BLOCK IF YOU USE ANY OTHER DATASET"
+   ],
+   "id": "e07e804c21e88fd6"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T10:15:26.024348Z",
-     "start_time": "2024-05-02T10:15:25.920888Z"
+     "end_time": "2024-05-02T13:13:01.699093Z",
+     "start_time": "2024-05-02T13:13:01.567814Z"
     }
    },
    "cell_type": "code",
-   "source": "metadata.to_csv(OUT_METADATA_PATH, index=False)",
+   "source": [
+    "BIRDCLEF_2024_METADATA_PATH: Final[Path] = Path(\"../data/raw/train_metadata.csv\")\n",
+    "\n",
+    "birdclef_2024_metadata = pd.read_csv(BIRDCLEF_2024_METADATA_PATH)\n",
+    "\n",
+    "metadata_filled = metadata.combine_first(birdclef_2024_metadata).sort_values(\"filename\")\n",
+    "\n",
+    "species_birdclef = set(birdclef_2024_metadata[\"primary_label\"])\n",
+    "species_meta = set(metadata_filled[\"primary_label\"])\n",
+    "species_birdclef - species_meta"
+   ],
+   "id": "800c34943e315caa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T13:13:02.432625Z",
+     "start_time": "2024-05-02T13:13:02.312545Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "metadata_filled.to_csv(OUT_METADATA_PATH, index=False)\n",
+    "metadata_filled.shape"
+   ],
    "id": "688f5ed76601c575",
-   "outputs": [],
-   "execution_count": 86
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24459, 12)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
   }
  ],
  "metadata": {
