--- a/notebooks/convert_metadata.ipynb
+++ b/notebooks/convert_metadata.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:12:59.886616Z",
-     "start_time": "2024-05-02T13:12:59.883713Z"
+     "end_time": "2024-05-02T14:40:12.346035Z",
+     "start_time": "2024-05-02T14:40:12.343070Z"
     }
    },
    "cell_type": "code",
@@ -37,24 +37,24 @@
     "EBIRD_TAXONOMY_PATH: Final[Path] = Path(\"../data/raw/eBird_Taxonomy_v2021.csv\")\n",
     "\n",
     "# Re-scraped 2024 metadata\n",
-    "XC_METADATA_PATH: Final[Path] = Path(\"./dataset/train_metadata_xc.csv\")\n",
-    "OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024/train_metadata.csv\")\n",
-    "EXTENSION: Final[str] = \".ogg\"\n",
+    "# XC_METADATA_PATH: Final[Path] = Path(\"./dataset/train_metadata_xc.csv\")\n",
+    "# OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024/train_metadata.csv\")\n",
+    "# EXTENSION: Final[str] = \".ogg\"\n",
     "\n",
     "# Additional 2024 metadata\n",
-    "# XC_METADATA_PATH: Final[Path] = Path(\"../data/raw/BirdClef2024_additional.csv\")\n",
-    "# OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024_additional/train_metadata.csv\")\n",
-    "# EXTENSION: Final[str] = \".mp3\""
+    "XC_METADATA_PATH: Final[Path] = Path(\"../data/raw/BirdClef2024_additional.csv\")\n",
+    "OUT_METADATA_PATH: Final[Path] = Path(\"../data/raw/2024_additional/train_metadata.csv\")\n",
+    "EXTENSION: Final[str] = \".mp3\""
    ],
    "id": "1bf84269af6f6d2f",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:13:00.183333Z",
-     "start_time": "2024-05-02T13:13:00.131674Z"
+     "end_time": "2024-05-02T14:40:12.650262Z",
+     "start_time": "2024-05-02T14:40:12.619731Z"
     }
    },
    "cell_type": "code",
@@ -66,13 +66,13 @@
    ],
    "id": "1d04bc58d6885a0",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:13:00.691204Z",
-     "start_time": "2024-05-02T13:13:00.354323Z"
+     "end_time": "2024-05-02T14:40:23.875542Z",
+     "start_time": "2024-05-02T14:40:23.477384Z"
     }
    },
    "cell_type": "code",
@@ -105,40 +105,33 @@
     {
      "data": {
       "text/plain": [
-       "     primary_label    secondary_labels    type  latitude  longitude  \\\n",
-       "937         asbfly                  []  [call]   39.2297   118.1987   \n",
-       "1809        asbfly  [gybthr1, brebul1]  [song]   36.3319   127.3555   \n",
-       "2961        asbfly                  []  [call]   21.1697    70.6005   \n",
-       "3154        asbfly                  []  [call]   15.5442    73.7733   \n",
-       "3155        asbfly                  []  [call]   15.5442    73.7733   \n",
+       "     primary_label secondary_labels          type   latitude   longitude  \\\n",
+       "6382        asbfly        [salwar1]  [call, song]  43.652400  142.797800   \n",
+       "6361        asbfly        [putbab1]        [call]  10.556700   98.566400   \n",
+       "6383        asbfly               []        [call]  14.750100  106.066700   \n",
+       "6360        asbfly               []        [song]  43.725637  142.805428   \n",
+       "6338        asbfly               []        [song]  43.615421  143.348494   \n",
        "\n",
-       "         scientific_name             common_name  \\\n",
-       "937   Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "1809  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "2961  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "3154  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "3155  Muscicapa dauurica  Asian Brown Flycatcher   \n",
-       "\n",
-       "                                 author  \\\n",
-       "937                      Matt Slaymaker   \n",
-       "1809                      Stuart Fisher   \n",
-       "2961                          vir joshi   \n",
-       "3154  Albert Lastukhin & Sergei Karpeev   \n",
-       "3155  Albert Lastukhin & Sergei Karpeev   \n",
+       "         scientific_name             common_name              author  \\\n",
+       "6382  Muscicapa dauurica  Asian Brown Flycatcher       Frank Lambert   \n",
+       "6361  Muscicapa dauurica  Asian Brown Flycatcher  Martjan Lammertink   \n",
+       "6383  Muscicapa dauurica  Asian Brown Flycatcher     Wouter Halfwerk   \n",
+       "6360  Muscicapa dauurica  Asian Brown Flycatcher       Peter Boesman   \n",
+       "6338  Muscicapa dauurica  Asian Brown Flycatcher       Peter Boesman   \n",
        "\n",
        "                                           license  rating  \\\n",
-       "937   //creativecommons.org/licenses/by-nc-sa/3.0/       5   \n",
-       "1809  //creativecommons.org/licenses/by-nc-sa/4.0/       3   \n",
-       "2961  //creativecommons.org/licenses/by-nc-sa/4.0/       1   \n",
-       "3154  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
-       "3155  //creativecommons.org/licenses/by-nc-sa/4.0/       4   \n",
+       "6382  //creativecommons.org/licenses/by-nc-nd/4.0/       2   \n",
+       "6361  //creativecommons.org/licenses/by-nc-nd/2.5/       4   \n",
+       "6383  //creativecommons.org/licenses/by-nc-nd/2.5/       1   \n",
+       "6360  //creativecommons.org/licenses/by-nc-nd/4.0/       4   \n",
+       "6338  //creativecommons.org/licenses/by-nc-nd/4.0/       5   \n",
        "\n",
        "                                url             filename  \n",
-       "937   https://xeno-canto.org/134896  asbfly/XC134896.ogg  \n",
-       "1809  https://xeno-canto.org/175797  asbfly/XC175797.ogg  \n",
-       "2961  https://xeno-canto.org/207738  asbfly/XC207738.ogg  \n",
-       "3154  https://xeno-canto.org/209218  asbfly/XC209218.ogg  \n",
-       "3155  https://xeno-canto.org/209219  asbfly/XC209219.ogg  "
+       "6382  https://xeno-canto.org/155673  asbfly/XC155673.mp3  \n",
+       "6361   https://xeno-canto.org/26046   asbfly/XC26046.mp3  \n",
+       "6383   https://xeno-canto.org/27245   asbfly/XC27245.mp3  \n",
+       "6360  https://xeno-canto.org/286199  asbfly/XC286199.mp3  \n",
+       "6338  https://xeno-canto.org/286212  asbfly/XC286212.mp3  "
       ],
       "text/html": [
        "<div>\n",
@@ -175,91 +168,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>937</th>\n",
+       "      <th>6382</th>\n",
+       "      <td>asbfly</td>\n",
+       "      <td>[salwar1]</td>\n",
+       "      <td>[call, song]</td>\n",
+       "      <td>43.652400</td>\n",
+       "      <td>142.797800</td>\n",
+       "      <td>Muscicapa dauurica</td>\n",
+       "      <td>Asian Brown Flycatcher</td>\n",
+       "      <td>Frank Lambert</td>\n",
+       "      <td>//creativecommons.org/licenses/by-nc-nd/4.0/</td>\n",
+       "      <td>2</td>\n",
+       "      <td>https://xeno-canto.org/155673</td>\n",
+       "      <td>asbfly/XC155673.mp3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6361</th>\n",
+       "      <td>asbfly</td>\n",
+       "      <td>[putbab1]</td>\n",
+       "      <td>[call]</td>\n",
+       "      <td>10.556700</td>\n",
+       "      <td>98.566400</td>\n",
+       "      <td>Muscicapa dauurica</td>\n",
+       "      <td>Asian Brown Flycatcher</td>\n",
+       "      <td>Martjan Lammertink</td>\n",
+       "      <td>//creativecommons.org/licenses/by-nc-nd/2.5/</td>\n",
+       "      <td>4</td>\n",
+       "      <td>https://xeno-canto.org/26046</td>\n",
+       "      <td>asbfly/XC26046.mp3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6383</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
        "      <td>[call]</td>\n",
-       "      <td>39.2297</td>\n",
-       "      <td>118.1987</td>\n",
+       "      <td>14.750100</td>\n",
+       "      <td>106.066700</td>\n",
        "      <td>Muscicapa dauurica</td>\n",
        "      <td>Asian Brown Flycatcher</td>\n",
-       "      <td>Matt Slaymaker</td>\n",
-       "      <td>//creativecommons.org/licenses/by-nc-sa/3.0/</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://xeno-canto.org/134896</td>\n",
-       "      <td>asbfly/XC134896.ogg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1809</th>\n",
-       "      <td>asbfly</td>\n",
-       "      <td>[gybthr1, brebul1]</td>\n",
-       "      <td>[song]</td>\n",
-       "      <td>36.3319</td>\n",
-       "      <td>127.3555</td>\n",
-       "      <td>Muscicapa dauurica</td>\n",
-       "      <td>Asian Brown Flycatcher</td>\n",
-       "      <td>Stuart Fisher</td>\n",
-       "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
-       "      <td>3</td>\n",
-       "      <td>https://xeno-canto.org/175797</td>\n",
-       "      <td>asbfly/XC175797.ogg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2961</th>\n",
-       "      <td>asbfly</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[call]</td>\n",
-       "      <td>21.1697</td>\n",
-       "      <td>70.6005</td>\n",
-       "      <td>Muscicapa dauurica</td>\n",
-       "      <td>Asian Brown Flycatcher</td>\n",
-       "      <td>vir joshi</td>\n",
-       "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
+       "      <td>Wouter Halfwerk</td>\n",
+       "      <td>//creativecommons.org/licenses/by-nc-nd/2.5/</td>\n",
        "      <td>1</td>\n",
-       "      <td>https://xeno-canto.org/207738</td>\n",
-       "      <td>asbfly/XC207738.ogg</td>\n",
+       "      <td>https://xeno-canto.org/27245</td>\n",
+       "      <td>asbfly/XC27245.mp3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3154</th>\n",
+       "      <th>6360</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[call]</td>\n",
-       "      <td>15.5442</td>\n",
-       "      <td>73.7733</td>\n",
+       "      <td>[song]</td>\n",
+       "      <td>43.725637</td>\n",
+       "      <td>142.805428</td>\n",
        "      <td>Muscicapa dauurica</td>\n",
        "      <td>Asian Brown Flycatcher</td>\n",
-       "      <td>Albert Lastukhin &amp; Sergei Karpeev</td>\n",
-       "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
+       "      <td>Peter Boesman</td>\n",
+       "      <td>//creativecommons.org/licenses/by-nc-nd/4.0/</td>\n",
        "      <td>4</td>\n",
-       "      <td>https://xeno-canto.org/209218</td>\n",
-       "      <td>asbfly/XC209218.ogg</td>\n",
+       "      <td>https://xeno-canto.org/286199</td>\n",
+       "      <td>asbfly/XC286199.mp3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3155</th>\n",
+       "      <th>6338</th>\n",
        "      <td>asbfly</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[call]</td>\n",
-       "      <td>15.5442</td>\n",
-       "      <td>73.7733</td>\n",
+       "      <td>[song]</td>\n",
+       "      <td>43.615421</td>\n",
+       "      <td>143.348494</td>\n",
        "      <td>Muscicapa dauurica</td>\n",
        "      <td>Asian Brown Flycatcher</td>\n",
-       "      <td>Albert Lastukhin &amp; Sergei Karpeev</td>\n",
-       "      <td>//creativecommons.org/licenses/by-nc-sa/4.0/</td>\n",
-       "      <td>4</td>\n",
-       "      <td>https://xeno-canto.org/209219</td>\n",
-       "      <td>asbfly/XC209219.ogg</td>\n",
+       "      <td>Peter Boesman</td>\n",
+       "      <td>//creativecommons.org/licenses/by-nc-nd/4.0/</td>\n",
+       "      <td>5</td>\n",
+       "      <td>https://xeno-canto.org/286212</td>\n",
+       "      <td>asbfly/XC286212.mp3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -285,10 +278,10 @@
     "\n",
     "birdclef_2024_metadata = pd.read_csv(BIRDCLEF_2024_METADATA_PATH)\n",
     "\n",
-    "metadata_filled = metadata.combine_first(birdclef_2024_metadata).sort_values(\"filename\")\n",
+    "metadata = metadata.combine_first(birdclef_2024_metadata).sort_values(\"filename\")\n",
     "\n",
     "species_birdclef = set(birdclef_2024_metadata[\"primary_label\"])\n",
-    "species_meta = set(metadata_filled[\"primary_label\"])\n",
+    "species_meta = set(metadata[\"primary_label\"])\n",
     "species_birdclef - species_meta"
    ],
    "id": "800c34943e315caa",
@@ -309,29 +302,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T13:13:02.432625Z",
-     "start_time": "2024-05-02T13:13:02.312545Z"
+     "end_time": "2024-05-02T14:40:26.918803Z",
+     "start_time": "2024-05-02T14:40:26.822318Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "metadata_filled.to_csv(OUT_METADATA_PATH, index=False)\n",
-    "metadata_filled.shape"
+    "metadata.to_csv(OUT_METADATA_PATH, index=False)\n",
+    "metadata.shape"
    ],
    "id": "688f5ed76601c575",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24459, 12)"
+       "(24279, 12)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 37
+   "execution_count": 49
   }
  ],
  "metadata": {
