Add scorer vizualization

--- a/notebooks/butter.ipynb
+++ b/notebooks/butter.ipynb
@@ -205,6 +205,51 @@
    },
    "id": "237ff73b87ae6b20",
    "execution_count": 20
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c1bbc4f610f41409"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique scientific names: 182\n",
+      "['Accipiter badius', 'Accipiter trivirgatus', 'Acridotheres fuscus', 'Acridotheres tristis', 'Acrocephalus dumetorum', 'Actitis hypoleucos', 'Aegithina tiphia', 'Alcedo atthis', 'Alcippe poioicephala', 'Amaurornis phoenicurus', 'Anas poecilorhyncha', 'Anastomus oscitans', 'Anhinga melanogaster', 'Anthus rufulus', 'Apus affinis', 'Arachnothera longirostra', 'Ardea alba', 'Ardea cinerea', 'Ardea intermedia', 'Ardea purpurea', 'Ardeola grayii', 'Argya affinis', 'Argya striata', 'Argya subrufa', 'Artamus fuscus', 'Arundinax aedon', 'Athene brama', 'Bubo nipalensis', 'Bubulcus ibis', 'Buceros bicornis', 'Cacomantis passerinus', 'Caprimulgus indicus', 'Carpodacus erythrinus', 'Cecropis daurica', 'Centropus sinensis', 'Ceryle rudis', 'Chalcophaps indica', 'Charadrius alexandrinus', 'Charadrius dubius', 'Chlidonias hybrida', 'Chloropsis aurifrons', 'Chrysocolaptes guttacristatus', 'Cinnyris asiaticus', 'Cinnyris lotenius', 'Circus aeruginosus', 'Cisticola juncidis', 'Columba elphinstonii', 'Columba livia', 'Copsychus fulicatus', 'Coracias benghalensis', 'Corvus macrorhynchos', 'Corvus splendens', 'Culicicapa ceylonensis', 'Cyornis pallidipes', 'Cyornis tickelliae', 'Cypsiurus balasiensis', 'Dendrocitta leucogastra', 'Dendrocitta vagabunda', 'Dendrocygna javanica', 'Dendronanthus indicus', 'Dicaeum concolor', 'Dicaeum erythrorhynchos', 'Dicrurus aeneus', 'Dicrurus leucophaeus', 'Dicrurus macrocercus', 'Dicrurus paradiseus', 'Dinopium benghalense', 'Dinopium javanense', 'Dryocopus javensis', 'Ducula badia', 'Dumetia atriceps', 'Egretta garzetta', 'Elanus caeruleus', 'Eudynamys scolopaceus', 'Eumyias albicaudatus', 'Ficedula nigrorufa', 'Ficedula ruficauda', 'Fulica atra', 'Gallinula chloropus', 'Galloperdix spadicea', 'Gallus sonneratii', 'Glaucidium radiatum', 'Gracula indica', 'Halcyon smyrnensis', 'Haliastur indus', 'Harpactes fasciatus', 'Hemicircus canente', 'Hemipus picatus', 'Hierococcyx varius', 'Himantopus himantopus', 'Hirundo rustica', 'Hypothymis azurea', 'Hypsipetes ganeesa', 'Ictinaetus malaiensis', 'Iole indica', 'Ketupa zeylonensis', 'Lanius cristatus', 'Larvivora brunnea', 'Leptocoma minima', 'Leptocoma zeylonica', 'Lonchura punctulata', 'Lonchura striata', 'Loriculus vernalis', 'Lyncornis macrotis', 'Machlolophus aplonotus', 'Merops leschenaulti', 'Merops orientalis', 'Merops philippinus', 'Metopidius indicus', 'Micropternus brachyurus', 'Milvus migrans', 'Mirafra affinis', 'Montecincla fairbanki', 'Motacilla cinerea', 'Motacilla flava', 'Motacilla maderaspatensis', 'Muscicapa dauurica', 'Mycteria leucocephala', 'Myophonus horsfieldii', 'Ninox scutulata', 'Nycticorax nycticorax', 'Ocyceros griseus', 'Oriolus kundoo', 'Oriolus xanthornus', 'Orthotomus sutorius', 'Ortygornis pondicerianus', 'Otus bakkamoena', 'Passer domesticus', 'Pastor roseus', 'Pavo cristatus', 'Pelargopsis capensis', 'Pellorneum ruficeps', 'Pericrocotus cinnamomeus', 'Pericrocotus flammeus', 'Pernis ptilorhynchus', 'Phylloscopus affinis', 'Phylloscopus magnirostris', 'Phylloscopus nitidus', 'Phylloscopus trochiloides', 'Picumnus innominatus', 'Picus chlorolophus', 'Picus xanthopygaeus', 'Pitta brachyura', 'Plegadis falcinellus', 'Pomatorhinus horsfieldii', 'Porphyrio poliocephalus', 'Prinia hodgsonii', 'Prinia inornata', 'Prinia socialis', 'Psilopogon haemacephalus', 'Psilopogon malabaricus', 'Psilopogon viridis', 'Psittacula columboides', 'Psittacula cyanocephala', 'Psittacula krameri', 'Pterorhinus delesserti', 'Pycnonotus cafer', 'Pycnonotus jocosus', 'Pycnonotus luteolus', 'Rubigula gularis', 'Saxicola caprata', 'Sholicola albiventris', 'Sitta frontalis', 'Spatula querquedula', 'Spilornis cheela', 'Streptopelia chinensis', 'Streptopelia decaocto', 'Streptopelia senegalensis', 'Strix leptogrammica', 'Sturnia pagodarum', 'Tachybaptus ruficollis', 'Tephrodornis sylvicola', 'Terpsiphone paradisi', 'Treron affinis', 'Tringa glareola', 'Tringa nebularia', 'Tringa ochropus', 'Tringa stagnatilis', 'Turdus simillimus', 'Upupa epops', 'Vanellus indicus', 'Yungipicus nanus']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Load metadata csv\n",
+    "\n",
+    "metadata = pd.read_csv(\"../data/raw/train_metadata.csv\")\n",
+    "\n",
+    "# Get all unique scientific names\n",
+    "unique_scientific_names = metadata[\"scientific_name\"].unique()\n",
+    "\n",
+    "print(f\"Number of unique scientific names: {len(unique_scientific_names)}\")\n",
+    "\n",
+    "\n",
+    "#Print them in a sorted way\n",
+    "print(sorted(unique_scientific_names))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T13:35:23.400653Z",
+     "start_time": "2024-05-06T13:35:23.280848Z"
+    }
+   },
+   "id": "13e0fc99a17c9d15",
+   "execution_count": 24
   }
  ],
  "metadata": {
